--- a/_config/playbooks/gcp-docker-app.yml
+++ b/_config/playbooks/gcp-docker-app.yml
@@ -33,7 +33,7 @@
         name: andreswebs.docker_app
       vars:
         app_name: "{{ app }}"
-        app_src: "{{ playbook_dir }}/../{{ app }}/app/"
+        app_src: "{{ playbook_dir }}/../../{{ app }}/app/"
         app_dest: "/opt/{{ app }}"
 
     - name: Check if a reboot is required
