--- a/_config/ansible.cfg
+++ b/_config/ansible.cfg
@@ -3,6 +3,7 @@ enable_plugins = gcp_compute, hetzner.hcloud.hcloud
 
 [defaults]
 inventory = inventory/personal.gcp.yml
+roles_path = ./roles
 
 [ssh_connection]
 ssh_args = -o ForwardAgent=yes -o ControlMaster=auto -o ControlPersist=60s -o StrictHostKeyChecking=accept-new
