--- a/_config/ansible.cfg
+++ b/_config/ansible.cfg
@@ -1,5 +1,5 @@
 [inventory]
-enable_plugins = gcp_compute, hetzner.hcloud.hcloud
+enable_plugins = gcp_compute, hetzner.hcloud.hcloud, aws_ec2
 
 [defaults]
 inventory = inventory/personal.gcp.yml
