--- a/wordpress/app/.env.example
+++ b/wordpress/app/.env.example
@@ -2,10 +2,16 @@ APP_HOST="blog.example.com"
 APP_PORT="80"
 LETSENCRYPT_EMAIL="someone@example.com"
 
+MYSQL_ROOT_PASSWORD_FILE="/run/secrets/db_root_password"
+MYSQL_PASSWORD_FILE="/run/secrets/db_password"
+MYSQL_DATABASE="wordpress"
+MYSQL_USER="wordpress"
+
 WORDPRESS_DB_HOST="wordpress-db:3306"
 WORDPRESS_DB_NAME="wordpress"
 WORDPRESS_DB_USER="wordpress"
 WORDPRESS_DB_PASSWORD_FILE="/run/secrets/db_password"
+WORDPRESS_TABLE_PREFIX="wp_"
 
 WORDPRESS_AUTH_KEY_FILE="/run/secrets/auth_key"
 WORDPRESS_AUTH_SALT_FILE="/run/secrets/auth_salt"
@@ -17,23 +23,17 @@ WORDPRESS_NONCE_KEY_FILE="/run/secrets/nonce_key"
 WORDPRESS_NONCE_SALT_FILE="/run/secrets/nonce_salt"
 
 WORDPRESS_CONFIG_EXTRA="
-/* Multisite */
-define('WP_ALLOW_MULTISITE', true );
-define('MULTISITE', true);
+define( 'WP_ALLOW_REPAIR', true );
 "
 
 # WORDPRESS_CONFIG_EXTRA="
 # /* Multisite */
-# define('WP_ALLOW_MULTISITE', true );
-# define('MULTISITE', true);
-# define('SUBDOMAIN_INSTALL', false);
-# define('DOMAIN_CURRENT_SITE', 'localhost'); // TODO: change to actual domain when deploying
-# define('PATH_CURRENT_SITE', '/');
-# define('SITE_ID_CURRENT_SITE', 1);
-# define('BLOG_ID_CURRENT_SITE', 1);
+# define( 'WP_ALLOW_REPAIR', true );
+# define( 'WP_ALLOW_MULTISITE', true  );
+# define( 'MULTISITE', true );
+# define( 'SUBDOMAIN_INSTALL', false );
+# define( 'DOMAIN_CURRENT_SITE', 'localhost' ); // TODO: change to actual domain when deploying
+# define( 'PATH_CURRENT_SITE', '/' );
+# define( 'SITE_ID_CURRENT_SITE', 1 );
+# define( 'BLOG_ID_CURRENT_SITE', 1 );
 # "
-
-MYSQL_ROOT_PASSWORD_FILE="/run/secrets/db_root_password"
-MYSQL_PASSWORD_FILE="/run/secrets/db_password"
-MYSQL_DATABASE="wordpress"
-MYSQL_USER="wordpress"
