--- a/wordpress/app/compose.yaml
+++ b/wordpress/app/compose.yaml
@@ -61,6 +61,7 @@ services:
       - WORDPRESS_DB_NAME
       - WORDPRESS_DB_USER
       - WORDPRESS_DB_PASSWORD_FILE
+      - WORDPRESS_TABLE_PREFIX
       - WORDPRESS_AUTH_KEY_FILE
       - WORDPRESS_AUTH_SALT_FILE
       - WORDPRESS_SECURE_AUTH_KEY_FILE
