--- a/_config/ansible.cfg
+++ b/_config/ansible.cfg
@@ -1,8 +1,8 @@
 [inventory]
-enable_plugins = gcp_compute, hetzner.hcloud.hcloud, aws_ec2
+enable_plugins = hetzner.hcloud.hcloud, gcp_compute, aws_ec2
 
 [defaults]
-inventory = inventory/personal.gcp.yml
+inventory = inventory/hcloud.yml
 roles_path = ./roles
 
 [ssh_connection]
