--- a/_config/playbooks/k3s.yml
+++ b/_config/playbooks/k3s.yml
@@ -10,15 +10,15 @@
     kube_config_remote: /etc/rancher/k3s/k3s.yaml
     kube_config_local: /tmp/k3s.yaml
 
-  become: yes
+  become: true
   become_user: root
   tasks:
     - name: Upgrade system
       ansible.builtin.apt:
-        update_cache: yes
+        update_cache: true
         upgrade: dist
-        autoremove: yes
-        autoclean: yes
+        autoremove: true
+        autoclean: true
       async: 3600
       poll: 5
       when: upgrade_system | default(false) | bool
