--- a/_config/playbooks/gcp-k3s.yml
+++ b/_config/playbooks/gcp-k3s.yml
@@ -5,20 +5,15 @@
   hosts:
     - vm_tag_k3s
 
-  vars:
-    kube_config_remote: /etc/rancher/k3s/k3s.yaml
-    kube_config_local: /tmp/k3s.yaml
-
-  become: yes
+  become: true
   become_user: root
   tasks:
-
     - name: Upgrade system
       ansible.builtin.apt:
-        update_cache: yes
+        update_cache: true
         upgrade: dist
-        autoremove: yes
-        autoclean: yes
+        autoremove: true
+        autoclean: true
       async: 3600
       poll: 5
       when: upgrade_system | default(false) | bool
@@ -47,7 +42,6 @@
         - system
 
   handlers:
-
     - name: reboot
       ansible.builtin.reboot:
         msg: Maintenance reboot initiated
