--- a/k3s/apps/otel/base/otel-collector.helm.values.yaml
+++ b/k3s/apps/otel/base/otel-collector.helm.values.yaml
@@ -1,8 +1,76 @@
 ---
 fullnameOverride: otel-collector
+mode: daemonset
+
 image:
   repository: otel/opentelemetry-collector-k8s
-mode: daemonset
+
 serviceAccount:
-  create: false
+  create: true
   name: otel-collector
+
+presets:
+  logsCollection:
+    enabled: true
+  hostMetrics:
+    enabled: true
+  kubeletMetrics:
+    enabled: true
+  kubernetesAttributes:
+    enabled: true
+
+extraEnvs:
+  - name: ELASTIC_APM_ENDPOINT
+    valueFrom:
+      secretKeyRef:
+        name: elastic-apm
+        key: ELASTIC_APM_ENDPOINT
+  - name: ELASTIC_APM_SECRET_TOKEN
+    valueFrom:
+      secretKeyRef:
+        name: elastic-apm
+        key: ELASTIC_APM_SECRET_TOKEN
+
+config:
+  extensions:
+    k8s_observer:
+      auth_type: serviceAccount
+      node: ${env:K8S_NODE_NAME}
+      observe_pods: true
+  exporters:
+    otlp/elastic:
+      endpoint: ${ELASTIC_APM_ENDPOINT}
+      compression: none
+      headers:
+        Authorization: Bearer ${ELASTIC_APM_SECRET_TOKEN}
+  receivers:
+    receiver_creator:
+      watch_observers: [k8s_observer]
+      receivers:
+        redis:
+          rule: type == "port" && pod.name matches "redis"
+          config:
+            collection_interval: 2s
+      otlp:
+        protocols:
+          grpc:
+            endpoint: ${MY_POD_IP}:4317
+          http:
+            cors:
+              allowed_origins:
+                - http://*
+                - https://*
+            endpoint: ${MY_POD_IP}:4318
+  service:
+    extensions: [health_check, k8s_observer]
+    pipelines:
+      traces:
+        processors: [batch]
+        exporters: [otlp/elastic]
+      metrics:
+        receivers: [receiver_creator]
+        processors: [batch]
+        exporters: [otlp/elastic]
+      logs:
+        processors: [batch]
+        exporters: [otlp/elastic]
