--- a/k3s/apps/vector/base/kustomization.yaml
+++ b/k3s/apps/vector/base/kustomization.yaml
@@ -1,6 +1,6 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: o11y
+namespace: vector
 resources:
-  - o11y.ns.yaml
+  - vector.ns.yaml
