--- a/openobserve/app/compose.yaml
+++ b/openobserve/app/compose.yaml
@@ -18,12 +18,20 @@ services:
     environment:
       - ZO_ROOT_USER_EMAIL
       - ZO_ROOT_USER_PASSWORD
+      - ZO_TELEMETRY
+      - ZO_PROMETHEUS_ENABLED
+      - ZO_WEB_URL
+      - ZO_CLUSTER_COORDINATOR
+      - ZO_LOCAL_MODE_STORAGE
+
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.app.rule=Host(`${APP_HOST}`)"
+      - "traefik.docker.network=app-net"
+      ## https
+      - "traefik.http.routers.app.rule=Host(`${ZO_WEB_URL}`)"
       - "traefik.http.routers.app.entrypoints=web"
       - "traefik.http.routers.app.middlewares=redirect-https"
-      - "traefik.http.routers.app-secure.rule=Host(`${APP_HOST}`)"
+      - "traefik.http.routers.app-secure.rule=Host(`${ZO_WEB_URL}`)"
       - "traefik.http.routers.app-secure.entrypoints=web-secure"
       - "traefik.http.routers.app-secure.service=app-secure"
       - "traefik.http.routers.app-secure.tls=true"
@@ -31,11 +39,17 @@ services:
       - "traefik.http.services.app-secure.loadbalancer.server.port=5080"
       - "traefik.http.middlewares.redirect-https.redirectscheme.scheme=https"
       - "traefik.http.middlewares.redirect-https.redirectscheme.permanent=true"
-      - "traefik.docker.network=app-net"
+      ## grpc
+      - "traefik.http.services.app-grpc.loadbalancer.server.scheme=h2c"
+      - "traefik.http.services.app-grpc.loadbalancer.server.port=5081"
+      - "traefik.http.routers.app-grpc.rule=Host(`${ZO_WEB_URL}`)"
+      - "traefik.http.routers.app-grpc.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.app-grpc.entrypoints=grpc"
+      - "traefik.http.routers.app-grpc.service=app-grpc"
 
   traefik:
     container_name: traefik
-    image: traefik:v2.9
+    image: traefik:v3.1
     restart: always
     networks:
       - app-net
@@ -43,6 +57,7 @@ services:
       - --providers.docker
       - --entrypoints.web.address=:80
       - --entrypoints.web-secure.address=:443
+      - --entrypoints.grpc.address=:5081
       - --certificatesresolvers.letsencrypt.acme.email=${LETSENCRYPT_EMAIL}
       - --certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json
       - --certificatesresolvers.letsencrypt.acme.tlschallenge=true
@@ -53,6 +68,10 @@ services:
         mode: host
       - target: 443
         published: 443
+        protocol: tcp
+        mode: host
+      - target: 5081
+        published: 5081
         protocol: tcp
         mode: host
     volumes:
