--- a/_config/.gitignore
+++ b/_config/.gitignore
@@ -1,6 +1,6 @@
 inventory/**
 !inventory/example.gcp.yml
-!inventory/example.aws_ec2.yml
+!inventory/aws_ec2.yml
 !inventory/hcloud.yml
 .env
 .envrc
