--- a/qryn/app/.env.example
+++ b/qryn/app/.env.example
@@ -4,5 +4,8 @@ CLICKHOUSE_SERVER="clickhouse-server"
 CLICKHOUSE_AUTH="qryn:inputthesecret"
 CLICKHOUSE_DB="qryn"
 
+QRYN_LOGIN="qryn"
+QRYN_PASSWORD="inputanothersecret"
+
 APP_HOST="qryn.example.com"
 APP_PORT="3100"
