--- a/postgres/compose.yaml
+++ b/postgres/compose.yaml
@@ -1,11 +1,23 @@
 ---
 services:
   postgres:
-    image: postgres:latest
+    image: postgres:17
     restart: always
+
     environment:
+      - PGDATA
+      - POSTGRES_DB
+      - POSTGRES_USER
       - POSTGRES_PASSWORD
+
+    volumes:
+      - "${LOCAL_DB_DATA_DIR}:${POSTGRES_DATA_DIR}"
+
     ports:
       - "${POSTGRES_PORT}:5432"
-    volumes:
-      - "${DATA_DIR}/data:/var/lib/postgresql/data"
+
+    healthcheck:
+      test: pg_isready -U ${POSTGRES_USER} -h localhost -d ${POSTGRES_DB}
+      interval: 5s
+      timeout: 5s
+      retries: 10
