wireguard on aws
Signed-off-by: Andre Silva <andreswebs@pm.me>

--- a/_config/inventory/aws_ec2.yml
+++ b/_config/inventory/aws_ec2.yml
@@ -13,7 +13,7 @@ keyed_groups:
 filters:
   instance-state-name: running
 
-use_contrib_script_compatible_ec2_tag_keys: true
+# use_contrib_script_compatible_ec2_tag_keys: true
 
 hostnames:
   - instance-id
