--- a/_config/ansible.cfg
+++ b/_config/ansible.cfg
@@ -2,8 +2,10 @@
 enable_plugins = hetzner.hcloud.hcloud, gcp_compute, aws_ec2
 
 [defaults]
-inventory = inventory/hcloud.yml
+inventory = inventory/aws_ec2.yml
+# inventory = inventory/hcloud.yml
 # roles_path = ./roles
 
-[ssh_connection]
-ssh_args = -o ForwardAgent=yes -o ControlMaster=auto -o ControlPersist=60s -o StrictHostKeyChecking=accept-new
+## Hetzner
+# [ssh_connection]
+# ssh_args = -o ForwardAgent=yes -o ControlMaster=auto -o ControlPersist=60s -o StrictHostKeyChecking=accept-new
