--- a/twentycrm/app/compose.yaml
+++ b/twentycrm/app/compose.yaml
@@ -11,7 +11,7 @@ networks:
 services:
   server:
     container_name: twentycrm-server
-    image: twentycrm/twenty:${TWENTYCRM_VERSION:-latest}
+    image: twentycrm/twenty:${TWENTYCRM_VERSION:-v1.5}
     init: true
     restart: always
 
@@ -63,10 +63,12 @@ services:
     depends_on:
       db:
         condition: service_healthy
+      redis:
+        condition: service_healthy
 
   worker:
     container_name: twentycrm-worker
-    image: twentycrm/twenty:${TWENTYCRM_VERSION:-latest}
+    image: twentycrm/twenty:${TWENTYCRM_VERSION:-v1.5}
     restart: always
     init: true
     command: ["yarn", "worker:prod"]
@@ -104,7 +106,7 @@ services:
     restart: always
 
     environment:
-      - PGDATA=${PGDATA:-/var/lib/postgresql/16/docker}
+      - PGDATA=${PGDATA:-/var/lib/postgresql/data}
       - POSTGRES_DB
       - POSTGRES_USER
       - POSTGRES_PASSWORD
@@ -123,9 +125,19 @@ services:
 
   redis:
     container_name: twentycrm-redis
-    image: redis:latest
+    image: redis:${REDIS_VERSION:-7.4.5-alpine}
     restart: always
-    command: [--maxmemory-policy, noeviction]
+    command: [redis-server, --maxmemory-policy, noeviction]
+
+    volumes:
+      - ${REDIS_LOCAL_DATA_DIR:-/var/lib/twentycrm/redis/data}:/data
+
+    healthcheck:
+      test: [CMD, redis-cli, ping]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 5s
 
     networks:
       - db
